@@ -14,6 +14,9 @@ Included
 - Gate idempotence is now enforced for duplicate-key replays:
 - duplicate-key runs still emit full receipts/reports but suppress `out/verify_360/latest.txt` pointer advance to prevent double-apply state movement.
 - receipt includes explicit idempotence mode and prior-run linkage (`NEW`/`REPLAY`/`PARTIAL`).
+- Gate receipt now includes an explicit deterministic capability ledger:
+- requested capabilities are enumerated per run, each marked `GRANTED` or `DENIED` with stable reason codes.
+- unset capabilities are fail-closed as `DENIED` with `VERIFY360_CAPABILITY_UNSET`.
 - Universal artifact adapter expansion (analysis-only, deterministic, fail-closed):
 - New safe-run adapter flags: `--adapter auto|none|archive|package|extension|iac|cicd|document|container|image|scm|signature`
 - Optional repeatable plugin flag: `--enable-plugin <name>` (explicit local plugin use only)
